improved swagger for get notes
